<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VNM</string>
    <string name="title_detallemedicamento_detail">Detalle</string>
    <string name="title_detalles_medicamento">Detalles Medicamento</string>
    <string name="title_activity_main_menu">VNM</string>
    <string name="opciones">Opciones</string>
    <string name="buscar_medicamento">Buscar Medicamento</string>
    <string name="title_activity_busqueda_medicamento">Búsqueda de Medicamentos</string>
    <string name="title_activity_info">Info.</string>
    <string name="title_activity_ecerca_de">Acerca de VNM</string>
    <string name="title_activity_detalle_medicamento_swipe_view">Detalle Medicamento Swipe View</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="nroCertificado">Nro de Certificado:</string>
    <string name="laboratorio">Laboratorio:</string>
    <string name="nombre_generico">Nombre Genérico:</string>
    <string name="nombre_comercial">Nombre Comercial:</string>
    <string name="pais_industria">Pais Industria:</string>
    <string name="forma_farmacéutica">Forma Farmacéutica:</string>
    <string name="condicion_de_expendio">Condición de expendio:</string>
    <string name="condicion_de_trazabilidad">Condición de trazabilidad:</string>
    <string name="presentacion">Presentación:</string>
    <string name="precio">Precio de Venta al Público:</string>
    <string name="GTIN">GTIN:</string>
    <string name="troquel">Troquel:</string>
    <string name="sin_campo_busqueda">Ingrese un campo de busqueda</string>
    <string name="recomendados">Medicamentos con el mismo principio activo</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">Splash</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_principio_activo">Ingrediente Farmacéutico Activo</string>
    <string name="lbl_informacion">Información</string>
    <string name="lbl_acerca_de">Acerca de VNM</string>
    <string name="lbl_medicamentos">Medicamentos</string>
    <string name="content_background">background</string>
    <string name="title_activity_buscar_principio_activo">Ingrediente Farmacéutico Activo</string>
    <string name="lbl_nombre_generico">Nombre Genérico</string>
    <string name="title_activity_detalle_principio_activo">Detalle IFA</string>
    <string name="title_activity_detalle_medicamento_embarazo">Detalle Medicamento Embarazo</string>
    <string name="lbl_accion_terapeutica">Acción Terapéutica:</string>
    <string name="lbl_">Ingrediente Farmacéutico Activo</string>
    <string name="lbl_indicaciones">Indicaciones:</string>
    <string name="lbl_posologia">Posología:</string>
    <string name="lbl_duracion">Duración:</string>
    <string name="lbl_contraindicaciones">Contraindicaciones, reacciones adversas, precauciones:</string>
    <string name="lbl_observaciones">Observaciones:</string>
    <string name="lbl_denuncias">ANMAT Responde</string>
    <string name="email_responde">Email: responde@anmat.gov.ar</string>
    <string name="email_responde_value">responde@anmat.gov.ar</string>
    <string name="tel_anmat">Tel: 0800-333-1234</string>
    <string name="fax_anmat">Fax: (011) 4340-0800/5252-8200 int 1159</string>
    <string name="tel_anmat_number">08003331234</string>
    <string name="choose_account">Elija una cuenta de correo:</string>
    <string name="uso_hospitalario">Producto de Uso Hospitalario</string>
    <string name="logo_desc">Logo</string>
    <string name="hint_nombre_generico">Nombre Genérico</string>
    <string name="hint_nombre_comercial">Nombre Comercial</string>
    <string name="hint_laboratorio">Laboratorio</string>
    <string name="hint_forma">Forma Farmacéutica</string>
    <string name="stat_icon">statIcon</string>
    <string name="dummy_small_text">Small Text</string>
    <string name="dummy_generico">Ibuprofeno / CAP</string>
    <string name="dummy_comercial">Actron</string>
    <string name="dummy_presentacion">Grajeas</string>
    <string name="dummy_long_text">Esto es un texto muy largo para tratar de hacer que las cosas se solapen</string>
    <string name="dummy_number">1098192783871623981</string>
    <string name="dummy_forma">forma</string>
    <string name="dummy_precio">$145</string>
    <string name="help">help</string>
    <string name="or_explanation">Utilizando este caracter como separador entre cada criterio, la búsqueda equivale a un \'O\' lógico. Ejemplo: ibu ? cafeina equivale a ibu O cafeina.</string>
    <string name="and_explanation">Utilizando este caracter como separador entre cada criterio, la búsqueda equivale a un \'Y\' lógico. Ejemplo: acido # ibu # cafeina equivale a acido Y ibu Y cafeina.</string>
    <string name="intro_help">En la búsqueda de medicamentos por nombre genérico, puede buscar por más de un criterio aplicando las siguientes condiciones lógicas:</string>
    <string name="busqueda_nombre_generico_help">Búsqueda por Nombre Genérico</string>
    <string name="title_activity_splash">Splash</string>
    <string name="ordenar">Ordenar</string>
    <string name="es_remediar">Solo Remediar</string>
    <string name="leyenda_remediar">El Ministerio de Salud de la Nación garantiza la distribución gratuita de este medicamento mediante el programa REMEDIAR</string>
    <string name="lbl_efectos_adversos">Comunicar Efectos Adversos</string>
    <string name="url_efectos_adversos">http://sistemas.anmat.gov.ar/aplicaciones_net/applications/fvg_eventos_adversos_nuevo/index.html</string>
    <string name="lbl_medicamentos_y_embarazo">Medicamentos y Embarazo</string>
    <string name="url_medicamentos_y_embarazo">http://www.anmat.gov.ar/principal.asp</string>
    <string name="lb_clasificacion_Terapeutica">Clasificación Terapéutica</string>
    <string name="lb_indicaciones_posologia">Indicaciones y Posología</string>
    <string name="lb_item_grupo">Grupo Nombre</string>
    <string name="lb_contraindicaciones">Contraindicaciones y Advertencias</string>
    <string name="lb_farmacologia">Farmacología</string>
    <string name="lb_interacciones">Interacciones</string>
    <string name="lb_reacciones_adversas">Reacciones Adversas</string>
    <string name="lb_referencias">Referencias</string>
    <string name="lb_info_adicional">Información Adicional</string>
    <string name="lb_bibliografia">Bibliografía</string>
    <string name="lb_otros_nombres">Otros Nombres</string>
    <string name="txt_sin_detalle">SIN DETALLE</string>
    <string name="lb_prescripcion_nom_gen">Prescripción por nombre genérico</string>
    <string name="lb_uso_racional">Uso racional de medicamentos</string>
    <string name="lb_sistema_nacional_traza">Sistema nacional de trazabilidad</string>
    <string name="lb_reporte_efectos_adversos">Reporte de efectos adversos</string>

</resources>
