<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/busqueda_nombre_generico_help"
    android:textStyle="bold"
    android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10dp"
    />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_help"
    />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="#:"
            android:labelFor="@+id/and_explanation_id"
            />
        <TextView
            android:id="@+id/and_explanation_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and_explanation"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\?:"
            android:labelFor="@+id/or_explanation_id"
            />
        <TextView
            android:id="@+id/or_explanation_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_explanation"
            />
    </LinearLayout>





</LinearLayout>

