<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <com.thinkupstudios.anmat.vademecum.components.ClearableAutoCompliteEditText
        android:id="@+id/txt_nombre_generico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_nombre_generico"
        android:nextFocusForward="@+id/txt_nombre_comercial"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_margin="10dp">
        <requestFocus />

    </com.thinkupstudios.anmat.vademecum.components.ClearableAutoCompliteEditText>

    <com.thinkupstudios.anmat.vademecum.components.ClearableAutoCompliteEditText
        android:id="@+id/txt_nombre_comercial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:nextFocusForward="@+id/txt_laboratorio"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:hint="@string/hint_nombre_comercial">

    </com.thinkupstudios.anmat.vademecum.components.ClearableAutoCompliteEditText>
    <com.thinkupstudios.anmat.vademecum.components.ClearableAutoCompliteEditText
        android:id="@+id/txt_laboratorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:nextFocusForward="@+id/btn_form_busqueda_buscar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:imeOptions="actionDone"
        android:hint="@string/hint_laboratorio">
    </com.thinkupstudios.anmat.vademecum.components.ClearableAutoCompliteEditText>

    <Button
        android:id="@+id/btn_form_busqueda_buscar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/anmat_azul"
        android:paddingLeft="76dp"
        android:paddingRight="76dp"
        android:background="@drawable/button_txt_search"

        android:text="@string/buscar_medicamento"
        android:layout_marginTop="10dp"
        android:padding="10dp"

        />

</LinearLayout>